--- a/site.yml
+++ b/site.yml
@@ -10,6 +10,7 @@
       copy:
         src: "{{ java_oracle_jdk_package }}"
         dest: "/tmp/jdk-{{ java_jdk_version }}.tar.gz"
+        mode: 0755
       register: download_java_binaries
       until: download_java_binaries is succeeded
       tags: java
@@ -18,6 +19,7 @@
       file:
         state: directory
         path: "{{ java_home }}"
+        mode: 0755
       tags: java
     - name: Install packages
       become: true
@@ -41,6 +43,7 @@
       template:
         src: jdk.sh.j2
         dest: /etc/profile.d/jdk.sh
+        mode: 0755
       tags: java
 - name: Install Elasticsearch
   hosts: elasticsearch
@@ -60,6 +63,7 @@
       file:
         state: directory
         path: "{{ elastic_home }}"
+        mode: 0755
       tags: elastic
     - name: Extract Elasticsearch in the installation directory
       become: true
@@ -76,6 +80,7 @@
       template:
         src: templates/elk.sh.j2
         dest: /etc/profile.d/elk.sh
+        mode: 0755
       tags: elastic
 - name: Install Kibana
   hosts: kibana
@@ -95,6 +100,7 @@
       file:
         state: directory
         path: "{{ kibana_home }}"
+        mode: 0755
       tags: kibana
     - name: Extract Kibana in the installation directory
       become: true
@@ -111,4 +117,5 @@
       template:
         src: templates/kbn.sh.j2
         dest: /etc/profile.d/kbn.sh
+        mode: 0755
       tags: kibana
