--- a/inventory/prod/group_vars/all.yml
+++ b/inventory/prod/group_vars/all.yml
@@ -1,2 +1,6 @@
 ---
-elk_stack_version: "7.14.0"
+elk_stack_version: "7.15.0"
+
+elasticsearch_version: "{{ elk_stack_version }}"
+kibana_version: "{{ elk_stack_version }}"
+filebeat_version: "{{ elk_stack_version }}"
