--- a/requirements.yml
+++ b/requirements.yml
@@ -1,15 +1,15 @@
 ---
-  - src: git@github.com:EmilTK/mnt-homeworks-ansible.git
+  - src: https://github.com/EmilTK/mnt-homeworks-ansible.git
     scm: git
     version: "2.1.4"
     name: elastic 
 
-  - src: git@github.com:EmilTK/kibana-role.git
+  - src: https://github.com/EmilTK/kibana-role.git
     scm: git
     version: "2.2.2"
     name: kibana
 
-  - src: git@github.com:EmilTK/filebeat-role.git
+  - src: https://github.com/EmilTK/filebeat-role.git
     scm: git
     version: "1.3.0"
     name: filebeat
